2005-05-13 Magnus Hagdorn
 * cvs_version.py: script used to parse CVS/Entries file to get date and branch of
   the most recently checked-out file
 * glimmer_version.f90.in renamed to glimmer_version.f90.in.in
 * Makefile.am generates glimmer_version.f90 from glimmer_version.f90.in using cvs_version.py
 * configure.in: add CVS date to version string if we compile from CVS sources

2005-05-11 Ian Rutt
 * configure.in: added rule to enable preprocessor in gfortran. Note that
 gfortran can't actually compile glimmer at the moment, but hopefully will
 be able to one day.
	
2005-04-22 Magnus Hagdorn
 * glimmer_ncio.f90: add sanity checking to make sure input netCDF file have the same
   grid size as the one specified in config file
 * glimmer_ts.f90: fail gracefully when the input file cannot be opened

2005-04-18 Magnus Hagdorn
 * configure.in: bump version to 0.5.2
 * definitions.tex: changed doc date to today
 * make_doc.rules: fix problem with dia where fonts are tiny
 * updated NEWS

2005-04-15 Magnus Hagdorn
 * glide.tex: added documentation for isostasy

2005-04-12 Ian Rutt
 * Added optional command-line interface to glint_example.f90. Uses
   non-standard Fortran extensions in the intel compiler - can be
   selected at compile-time by defining preprocessor symbol GLEX_COM_LINE.
   Needed to do this to facilitate batch processing of glint runs on
   our Beowulf cluster, but obviously it's non-ideal.
 * Corrected error in comment in glint_vars.def
	
2005-04-11 Magnus Hagdorn
 * glimmer_CFproj.f90: rename attribute back to scale_factor_at_projection_origin in order to
   adhere to CF standard
 * glint_vars.def: add standard names to a few variables

2005-04-11 Magnus Hagdorn
 * glint_global_interp.f90: real constants have to be double precision, changed
   masko==.false. to .not.masko
 * glint_example_clim.f90: initialise pointers to NULL(), dummy arguments which might be
   unassociated have to be pointers

2005-04-11 Ian Rutt